@@ -8,6 +8,7 @@
 * gui: #2472 fixed: use common status icons in Status Window when changing status for all accounts (Vogel)
 * single_window: #2470 fixed: "Start Docked" didn't work for Single Window plugin (Vogel)
 * gui: #1916 fixed: use Kadu icon for all non-chat windows (Vogel)
+* core: #2312 fixed: properly remove all contacts and chats when removing account (Vogel)
 
 +++ version 0.12.0-alpha4
 * sql_history: #2484 done: removed uuids from history file, now history can be moved between instances (Vogel)
